# icua

./: .Xresources  .gitignore  IntelliJCodeStyleChris.xml  IntelliJCodeStylesChris.xml  IntelliJInspectionChris.xml  IntelliJInspectionsChris.xml  IntelliJKeyMapChrisFormatted.xml  IntelliJKeyMapsChris.xml  IntelliJKeyMapsChrisFormatted.xml  IntelliJStyleChris.xml  KeyMapChris.xml  KeyMapChrisFormatted.xml  README.md  RemovedActions.xml  cua.txt  cuaChris.txt
cate/: TODO  TODO.txt  cate.cabal  stack.yaml
cate/app/: Main.hs
cate/src/: ANSICodes.hs  ASCIICodes.hs  DisplayText.hs  Event.hs  LazyFileRead.hs  Main.hs  Terminal.hs  TerminalCharWidth.hsc  TerminalCharacterByteSize.hs  TerminalCharacterWidth.hsc  TerminalSize.hsc  TerminalType.hs  UTF8CharByteSize.hs  UTF8SafeByteJump.hs
cate/src/Cate/: ANSICodes.hs  ASCIICodes.hs  Buffer.hs  Display.hs  Editor.hs  EditorLoop.hs  Event.hs  ProcessInput.hs  TerminalSize.hsc
cate/src/Cate/Types/: BufferTypes.hs  DisplayTypes.hs
cate/test/: DisplayTextTest.hs  Test.hs  data.txt
cate2/: TODO  cate.cabal
cate2/src/: Main.hs
cate2/src/Cate/: Editor.hs  Event.hs  TerminalCharacterWidth.hsc  TerminalSize.hsc
cate2/src/Cate/Types/: EditorTypes.hs
cate3/: TODO  cate.cabal
cate3/src/: Main.hs
cate3/src/Cate/: Display.hs  Editor.hs  TerminalSize.hsc
cate3/src/Cate/Types/: EditorTypes.hs
cate3/testData/: data.txt  dataCombine.txt  dataShortHorizontal.txt  dataShortVertical.txt  utf8Test.txt
cate3/testOLD/data/: horizontalShort.txt  simple.txt
cate4/: cate.cabal
cate4/src/: Main.hs
cate4/src/Cate/: Cate.hs
cate4/src/Cate/Core/: Display.hs  Display2.hs
cate4/src/Cate/Core/Types/: CoreTypes.hs  CoreTypes2.hs
cate4/src/Cate/FrontEnds/: TerminalCharacterWidth.hsc  TerminalSize.hsc
cate4/test/: Test.hs
cate4/test/Core/: DisplaySuite.hs
cateNew/: README.md  cate.cabal
cateNew/src/: DisplayText.hs  FileReader.hs  Main.hs  TerminalANSICodes.hs  TerminalInput.hs  TerminalSize.hsc
cateNew/test/: DisplayTextTest.hs
cateNewest/: README.md  cate.cabal
cateNewest/src/: DisplayText.hs  Main.hs
cateNewest/test/: DisplayTextTest.hs  Test.hs
cateOLD/: DD  TODO.txt
cateOLD/src/: Main.hs
cateOLD/src/Cate/: ANSICodes.hs  Display.hs  Event.hs  TerminalSize.hsc
cateOLD/src/Cate/Types/: EditorTypes.hs
cateOLD/test/: data.txt
catv/: .gitignore  TODO  catv.cabal  stack.yaml
catv/src/: FileReader.hs  KeyEvent.hs  LayoutText.hs  Main.hs  TerminalSize.hsc
catv/src/Core/: Client.hs  FileReader.hs  JSONExample.hs  LayoutText.hs  Server.hs
catv/src/Core/Types/: DisplaySize.hs
catv/src/Plugins/Display/: PadText.hs
catv/src/Plugins/Key/: KeyEvent.hs
catv/src/UI/Terminal/: TerminalANSICodes.hs  TerminalRawMode.hs  TerminalSize.hsc
catv/test/: LayoutTextTest.hs  Test.hs
catv/test/Core/: LayoutTextTest.hs
catvOld/: README.md  catv.cabal
catvOld/src/: DisplayText.hs  Main.hs  TerminalANSICodes.hs  TerminalRawMode.hs  TerminalSize.hsc
term-c/: term.c
