name:                cate
version:             0.1.0.1
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable cate
  main-is:             Main.hs
  hs-source-dirs: src
  other-modules: Cate.TerminalSize
  -- other-extensions:
  build-depends:       base, unix
  default-language:    Haskell2010
