name:                cate
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:		
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable cate
  main-is:             Main.hs
  other-modules: Cate.TerminalSize, Cate.TerminalCharacterWidth
  -- other-extensions:    
  build-depends:       base, bytestring, text, unix
  hs-source-dirs:      src
  default-language:    Haskell2010