name:                cate
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Cate
  other-modules:       Core.Types.CoreTypes
                       Core.Display
                       FrontEnds.TerminalSize
                       FrontEnds.TerminalCharacterWidth
  build-depends:       base, unix
  hs-source-dirs:      src/Cate
  default-language:    Haskell2010

executable cate
  main-is:             Main.hs
  build-depends:       base, cate
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite Test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base, tasty, tasty-quickcheck, QuickCheck, tasty-hunit, HUnit, tasty-smallcheck, smallcheck
  hs-source-dirs:      test
  default-language:    Haskell2010
