name:                catv
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable catv
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, unix
  other-modules:       Core.Types.DisplaySize
                       Core.LayoutText
                       Core.FileReader
                       Plugins.Key.KeyEvent
                       Plugins.Display.PadText
                       UI.Terminal.TerminalRawMode
                       UI.Terminal.TerminalSize
                       UI.Terminal.TerminalANSICodes
  ghc-options:         -W

test-suite cate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base
                     , split
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck